@startuml Expressions
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Expression{
type: Type
}

class IntLiteral {
    value: int
}
class DoubleLiteral {
    value: double
}

class Variable{
    name: String
    definition: Definition
}
class ArithmeticOperation{
    op: String
    leftExpression: Expression
    rightExpression: Expression
}
class LogicOperation{
    op: String
    leftExpression: Expression
    rightExpression: Expression
}
class ComparisonOperation{
    op: String
    leftExpression: Expression
    rightExpression: Expression
}
class Invocation{
    arguments: List<Expression>
}
class Indexing{
expression:Expression
}
class FieldAccess{
leftF : Expression
rightF: String
}
class UnaryMinus{
expression:Expression
}
class Not{
expression:Expression
}
class Cast{
type: Type
}
ASTNode <|-- Expression
Expression <|.. IntLiteral
Expression <|.. Invocation
Expression <|.. DoubleLiteral
Expression <|.. Variable
Expression <|.. Not
Expression <|.. Cast
Expression <|.. UnaryMinus
Expression <|.. ArithmeticOperation
Expression <|.. Indexing
Expression <|.. FieldAccess
Expression <|.. ComparisonOperation
ArithmeticOperation o-- "2" Expression
Expression <|.. LogicOperation
LogicOperation o-- "2" Expression

@enduml
